Authentification JWT sécurisée Swagger intégré Code entièrement commenté et structuré

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://harouna:harouna123@cluster0.f6rb6eg.mongodb.net/recette?appName=Cluster0
+
+JWT_SECRET=super_secret_key
