--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
